"display: unset" > "display: inherit"
"display: unset" > "display: inherit" on .show- and .hide- classes.

--- a/css/classes.css
+++ b/css/classes.css
@@ -180,18 +180,15 @@ html[xmlns] .cf {
 
 @media only screen and (min-width: 1920px) {
   .show-big-desktop {
-    display: initial;
-    display: unset; } }
+    display: inherit; } }
 
 @media only screen and (min-width: 1600px) and (max-width: 1919px) {
   .show-big-desktop {
-    display: initial;
-    display: unset; } }
+    display: inherit; } }
 
 @media only screen and (min-width: 1024px) and (max-width: 1599px) {
   .show-desktop {
-    display: initial;
-    display: unset; } }
+    display: inherit; } }
 
 @media only screen and (min-width: 1920px) {
   .show-desktop {
@@ -203,8 +200,7 @@ html[xmlns] .cf {
 
 @media only screen and (min-width: 768px) and (max-width: 1023px) {
   .show-tab-x {
-    display: initial;
-    display: unset; } }
+    display: inherit; } }
 
 @media only screen and (min-width: 1920px) {
   .show-tab-x {
@@ -220,8 +216,7 @@ html[xmlns] .cf {
 
 @media only screen and (min-width: 480px) and (max-width: 767px) {
   .show-tablet {
-    display: initial;
-    display: unset; } }
+    display: inherit; } }
 
 @media only screen and (min-width: 1920px) {
   .show-tablet {
@@ -241,8 +236,7 @@ html[xmlns] .cf {
 
 @media only screen and (max-width: 480px) {
   .show-phone {
-    display: initial;
-    display: unset; } }
+    display: inherit; } }
 
 @media only screen and (min-width: 1920px) {
   .show-phone {
