--- a/scss/classes/helper-classes/_helper-classes.scss
+++ b/scss/classes/helper-classes/_helper-classes.scss
@@ -97,19 +97,19 @@ html[xmlns] .cf {
 
 .show {
   &-big-desktop { 
-    @include mq() { display: initial; display: unset; }
-    @include mq(big-desktop) { display: initial; display: unset; }
+    @include mq() { display: inherit; }
+    @include mq(big-desktop) { display: inherit; }
   }
   &-desktop { @include mq(desktop) {
-    display: initial; display: unset; } @include mq() { display: none; } @include mq(big-desktop) { display: none; }
+    display: inherit; } @include mq() { display: none; } @include mq(big-desktop) { display: none; }
   }
   &-tab-x { @include mq(tab-x) {
-    display: initial; display: unset; } @include mq() { display: none; } @include mq(big-desktop) { display: none; } @include mq(desktop) { display: none; }
+    display: inherit; } @include mq() { display: none; } @include mq(big-desktop) { display: none; } @include mq(desktop) { display: none; }
   }
   &-tablet { @include mq(tablet) {
-    display: initial; display: unset; } @include mq() { display: none; } @include mq(big-desktop) { display: none; } @include mq(desktop) { display: none; } @include mq(tab-x) { display: none; }
+    display: inherit; } @include mq() { display: none; } @include mq(big-desktop) { display: none; } @include mq(desktop) { display: none; } @include mq(tab-x) { display: none; }
   }
   &-phone { @include mq(phone) {
-    display: initial; display: unset; } @include mq() { display: none; } @include mq(big-desktop) { display: none; } @include mq(desktop) { display: none; } @include mq(tab-x) { display: none; } @include mq(tablet) { display: none; }
+    display: inherit; } @include mq() { display: none; } @include mq(big-desktop) { display: none; } @include mq(desktop) { display: none; } @include mq(tab-x) { display: none; } @include mq(tablet) { display: none; }
   }
 }
