--- a/css/flex.css
+++ b/css/flex.css
@@ -1,3 +1,12 @@
+body {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+  -ms-flex-flow: column nowrap;
+  flex-flow: column nowrap; }
+
 .grow-1 {
   -webkit-box-flex: 1;
   -ms-flex: 1;
