--- a/css/flex.css
+++ b/css/flex.css
@@ -1,12 +1,3 @@
-body {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-orient: vertical;
-  -webkit-box-direction: normal;
-  -ms-flex-flow: column nowrap;
-  flex-flow: column nowrap; }
-
 .grow-1 {
   -webkit-box-flex: 1;
   -ms-flex: 1;
@@ -96,3 +87,12 @@ body {
   flex-grow: initial;
   -ms-flex-negative: 6;
   flex-shrink: 6; }
+
+.a-flex {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+  -ms-flex-flow: column wrap;
+  flex-flow: column wrap; }
