--- a/css/library.css
+++ b/css/library.css
@@ -375,7 +375,7 @@ address, article, aside, canvas, div, fieldset, footer, form, h1, h2, h3, h4, h5
 
 a {
   outline: none; }
-  a, a:visited {
+  a:visited {
     text-decoration: none;
     color: #0008ff; }
   a:hover, a:focus, a:active {
@@ -484,6 +484,15 @@ div.unset, details.unset {
 .unset, .unset-children > * {
   all: initial;
   all: unset; }
+
+body {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+  -ms-flex-flow: column nowrap;
+  flex-flow: column nowrap; }
 
 /* MARGIN MIXINS */
 /* PADDING MIXINS */
@@ -984,6 +993,16 @@ html[xmlns] .cf {
   -webkit-transform: translate(-50%, -50%);
   -ms-transform: translate(-50%, -50%);
   transform: translate(-50%, -50%); }
+
+.sticky-box {
+  position: -webkit-sticky;
+  position: sticky; }
+  .sticky-box::after {
+    display: block;
+    clear: both;
+    line-height: 0;
+    height: 0;
+    content: " "; }
 
 /*
 ** Container **
@@ -1497,15 +1516,6 @@ html[xmlns] .cf {
       -webkit-columns: 1;
       columns: 1; } }
 
-body {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-orient: vertical;
-  -webkit-box-direction: normal;
-  -ms-flex-flow: column nowrap;
-  flex-flow: column nowrap; }
-
 .grow-1 {
   -webkit-box-flex: 1;
   -ms-flex: 1;
@@ -1595,6 +1605,15 @@ body {
   flex-grow: initial;
   -ms-flex-negative: 6;
   flex-shrink: 6; }
+
+.a-flex {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+  -ms-flex-flow: column wrap;
+  flex-flow: column wrap; }
 
 /* Wrapper / <Main> */
 /* MARGIN MIXINS */
