--- a/scss/classes/positioning/_positioning.scss
+++ b/scss/classes/positioning/_positioning.scss
@@ -5,3 +5,8 @@
   left: 50%;
   transform: translate(-50%, -50%);
 }
+
+.sticky-box {
+  position: sticky;
+  @include clearfix; // In case of float
+}
