--- a/scss/flex/classes/_classes.scss
+++ b/scss/flex/classes/_classes.scss
@@ -2,3 +2,8 @@
 	.grow-#{$i} {flex: 1 * $i;}
 	.shrink-#{$i} {flex: 0 1 * $i; flex-grow: initial; flex-shrink: 1 * $i;}
 }
+
+.a-flex {
+  display: flex;
+  flex-flow: column wrap;
+}
